@@ -156,8 +156,7 @@ structure (defined in
 .I id
 is ignored. This operation is restricted to super-user.
 .TP
-For XFS filesystems making use of the XFS Quota Manager (XQM), the
-above commands are bypassed and the following commands are used:
+For XFS filesystems making use of the XFS Quota Manager (XQM), the above commands are bypassed and the following commands are used:
 .TP 15
 .SB Q_XQUOTAON
 Turn on quotas for an XFS filesystem.
